--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: 1.0.5
+  confetti: ^0.7.0
 
 dev_dependencies:
   hive_generator: 2.0.0
@@ -34,6 +35,9 @@ flutter:
     - assets/images/AngryPig/
     - assets/images/Bat/
     - assets/images/Rino/
+    - assets/images/Bee/
+    - assets/images/BlueBird/
+    - assets/images/Chameleon/
     - assets/audio/
 
   fonts:
