Working with 2 stages game

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dino_run">
    <application
-        android:label="dino_run"
+        android:label="rabbit_run"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
