--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,14 @@ dependencies:
     sdk: flutter
   cupertino_icons: 1.0.5
   confetti: ^0.7.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  image_path: "assets/images/icon.png"
+  android: true
+  ios: true
+
+
 
 dev_dependencies:
   hive_generator: 2.0.0
@@ -25,6 +33,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: 2.0.1
+
+
+
 
 flutter:
   uses-material-design: true
@@ -38,6 +49,7 @@ flutter:
     - assets/images/Bee/
     - assets/images/BlueBird/
     - assets/images/Chameleon/
+    - assets/images/Rocks/
     - assets/audio/
 
   fonts:
