--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,20 +3,20 @@ description: A 2D infinite side scroller.
 
 publish_to: "none"
 
-version: 1.0.0+1
+version: 1.1.0+2
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
-  flame: 1.7.2
-  flame_audio: 1.4.1
+  flame: ^1.18.0
+  flame_audio: ^2.10.2
   hive: 2.2.3
-  path_provider: 2.0.14
-  provider: 6.0.5
+  path_provider: ^2.1.3
+  provider: ^6.1.2
   flutter:
     sdk: flutter
-  cupertino_icons: 1.0.5
+  cupertino_icons: ^1.0.8
   confetti: ^0.7.0
   flutter_launcher_icons: ^0.13.1
 
@@ -28,11 +28,11 @@ flutter_icons:
 
 
 dev_dependencies:
-  hive_generator: 2.0.0
-  build_runner: 2.3.3
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.11
   flutter_test:
     sdk: flutter
-  flutter_lints: 2.0.1
+  flutter_lints: ^4.0.0
 
 
 
@@ -56,3 +56,5 @@ flutter:
     - family: Audiowide
       fonts:
         - asset: assets/fonts/Audiowide/Audiowide-Regular.ttf
+
+
