--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   confetti: ^0.7.0
   flutter_launcher_icons: ^0.13.1
   flutter_donation_buttons: ^0.4.10
+  url_launcher: ^6.3.0
 
 
 flutter_icons:
